Migrated to java11